Fixed alignment

--- a/src/components/css/howdy.css
+++ b/src/components/css/howdy.css
@@ -46,7 +46,7 @@ input[type='checkbox']:checked {
 .image-box {
     width:200px;
     margin-left: 10px;
-    float: left;
+    margin: 0 auto;
 }
 
 .image-box img {
